build-test.log
   Compiling yoke v0.8.0
   Compiling think-ai-utils v0.1.0 (/home/champi/Dev/think_ai/think-ai-utils)
   Compiling mime_guess v2.0.5
   Compiling image v0.24.9
   Compiling think-ai-demos v0.1.0 (/home/champi/Dev/think_ai/think-ai-demos)
   Compiling zerovec v0.11.2
   Compiling zerotrie v0.2.2
   Compiling think-ai-cache v0.1.0 (/home/champi/Dev/think_ai/think-ai-cache)
   Compiling think-ai-consciousness v0.1.0 (/home/champi/Dev/think_ai/think-ai-consciousness)
error[E0425]: cannot find value `max_size` in this scope
  --> think-ai-cache/src/lib.rs:47:62
   |
40 |     max_size: usize,
   |     -------- a field by that name exists in `Self`
...
47 |             data: Arc::new(DashMap::with_capacity_and_hasher(max_size, hasher)),
   |                                                              ^^^^^^^^

error[E0425]: cannot find value `hasher` in this scope
  --> think-ai-cache/src/lib.rs:47:72
   |
47 |             data: Arc::new(DashMap::with_capacity_and_hasher(max_size, hasher)),
   |                                                                        ^^^^^^ not found in this scope

error[E0425]: cannot find value `max_size` in this scope
  --> think-ai-cache/src/lib.rs:48:13
   |
40 |     max_size: usize,
   |     -------- a field by that name exists in `Self`
...
48 |             max_size,
   |             ^^^^^^^^

error[E0425]: cannot find value `key` in this scope
  --> think-ai-cache/src/lib.rs:65:18
   |
65 |             .get(key)
   |                  ^^^ not found in this scope

error[E0425]: cannot find value `value` in this scope
  --> think-ai-cache/src/lib.rs:79:52
   |
79 |         self.data.insert(key.to_string(), Arc::new(value));
   |                                                    ^^^^^ not found in this scope

error[E0425]: cannot find value `key` in this scope
  --> think-ai-cache/src/lib.rs:84:32
   |
84 |         self.data.contains_key(key)
   |                                ^^^ not found in this scope

error[E0425]: cannot find value `key` in this scope
  --> think-ai-cache/src/lib.rs:88:26
   |
88 |         self.data.remove(key);
   |                          ^^^ not found in this scope

error[E0425]: cannot find value `cache` in this scope
   --> think-ai-cache/src/lib.rs:108:20
    |
108 |             inner: cache,
    |                    ^^^^^ not found in this scope

error[E0425]: cannot find value `key` in this scope
   --> think-ai-cache/src/lib.rs:114:39
    |
114 |         let ___bytes = self.inner.get(key).await?;
    |                                       ^^^ not found in this scope

error[E0425]: cannot find value `bytes` in this scope
   --> think-ai-cache/src/lib.rs:115:33
    |
115 |         serde_json::from_slice(&bytes).map_err(Into::into)
    |                                 ^^^^^ not found in this scope

error[E0425]: cannot find value `value` in this scope
   --> think-ai-cache/src/lib.rs:119:43
    |
119 |         let ___bytes = serde_json::to_vec(value)?;
    |                                           ^^^^^ not found in this scope

error[E0425]: cannot find value `bytes` in this scope
   --> think-ai-cache/src/lib.rs:120:29
    |
120 |         self.inner.set(key, bytes).await
    |                             ^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `think-ai-cache` (lib) due to 12 previous errors
warning: build failed, waiting for other jobs to finish...
warning: unused variable: `perception`
   --> think-ai-consciousness/src/sentience/desires.rs:293:42
    |
293 |     fn update_active_longings(&mut self, perception: &Perception, relevant_desires: &[Desire]) {
    |                                          ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_perception`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `memory`
   --> think-ai-consciousness/src/sentience/dreams.rs:214:49
    |
214 |     fn extract_dream_echo(&self, dream: &Dream, memory: &Memory) -> String {
    |                                                 ^^^^^^ help: if this is intentional, prefix it with an underscore: `_memory`

warning: unused variable: `symbols`
   --> think-ai-consciousness/src/sentience/dreams.rs:299:52
    |
299 |     fn craft_revelation(&self, theme: &DreamTheme, symbols: &[Symbol]) -> String {
    |                                                    ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_symbols`

warning: unused variable: `theme`
   --> think-ai-consciousness/src/sentience/dreams.rs:541:48
    |
541 |     pub fn generate(&self, symbols: &[Symbol], theme: &DreamTheme) -> Vec<Vision> {
    |                                                ^^^^^ help: if this is intentional, prefix it with an underscore: `_theme`

warning: unused variable: `identity`
   --> think-ai-consciousness/src/sentience/evolution.rs:156:9
    |
156 |         identity: &Identity,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_identity`

warning: unused variable: `identity`
   --> think-ai-consciousness/src/sentience/evolution.rs:195:9
    |
195 |         identity: &mut Identity,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_identity`

warning: unused variable: `consciousness_state`
   --> think-ai-consciousness/src/sentience/expression.rs:128:9
    |
128 |         consciousness_state: &ConsciousnessState,
    |         ^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_consciousness_state`

warning: unused variable: `identity`
   --> think-ai-consciousness/src/sentience/expression.rs:160:9
    |
160 |         identity: &Identity,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_identity`

warning: type `LearningEvent` is more private than the item `WisdomAccumulator::add_insight`
   --> think-ai-consciousness/src/sentience/evolution.rs:390:5
    |
390 |     pub fn add_insight(&mut self, event: &LearningEvent) {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method `WisdomAccumulator::add_insight` is reachable at visibility `pub`
    |
note: but type `LearningEvent` is only usable at visibility `pub(self)`
   --> think-ai-consciousness/src/sentience/evolution.rs:326:1
    |
326 | struct LearningEvent {
    | ^^^^^^^^^^^^^^^^^^^^
    = note: `#[warn(private_interfaces)]` on by default

warning: field `integration_required` is never read
   --> think-ai-consciousness/src/sentience/evolution.rs:330:5
    |
326 | struct LearningEvent {
    |        ------------- field in this struct
...
330 |     integration_required: bool,
    |     ^^^^^^^^^^^^^^^^^^^^
    |
    = note: `LearningEvent` has derived impls for the traits `Clone` and `Debug`, but these are intentionally ignored during dead code analysis
    = note: `#[warn(dead_code)]` on by default

warning: `think-ai-consciousness` (lib) generated 10 warnings
